<resources>
    <string name="app_name">CallScreen</string>
    <string name="call_flash">Call Flash</string>
    <string name="wallpapers">Wallpapers</string>
    <string name="ringtones">Ringtone</string>
    <string name="setings">Setings</string>
    <string name="camera_wallpaper">Camera wallpaper</string>
    <string name="video_description">Image video</string>
    <string name="Wallpaper_3d">Wallpaper 3d</string>
    <string name="camera_description">Image camera</string>
    <string name="video_wallpaper">Video wallpaper</string>
    <string name="need_permission">We need to grant permissions to continue using the function</string>
    <string name="feature">Feature</string>
    <string name="popular">Popular</string>

    <string name="picker_title">Select Contacts</string>
    <string name="tv_select_btn_text_disabled">Finish</string>
    <string name="tv_select_btn_text_enabled">Finish(%1$s)</string>
    <string name="tv_select_all_btn_text">Select All</string>
    <string name="tv_unselect_all_btn_text">Un-select All</string>
    <string name="tv_no_contacts">No myContact found</string>
    <!--<string name="wallpaper">WALLPAPER</string>-->
    <string name="_3d">3D</string>
    <string name="video">Video</string>
    <string name="image">Image</string>
    <string name="favorite">Favorite</string>
    <string name="wallpaper">WALLPAPER</string>
    <string name="set_wallpaper">Set Wallpaper</string>
    <string name="set_call_flash">Set Call Flash</string>
    <string name="download_for_free">Download for free</string>
    <string name="download_failed">Download failed</string>
    <string name="color_phone_enabled">Color Phone Enabled</string>
    <string name="defaul_dialer">Defaul Dialer</string>
    <string name="led_flash">Led Flash</string>
    <string name="contact_theme">Contact Theme</string>
    <string name="feedback">Feedback</string>
    <string name="general_settings">General Settings</string>
    <string name="about">About</string>
    <string name="follow_us_on_facebook">Follow Us On Facebook</string>
    <string name="settings_titile">SETTINGS</string>
    <string name="call">Call</string>
    <string name="marke_as_spam">Marke as spam</string>

    <string name="contacts">Contacts</string>
    <string name="facetime">Face Time</string>
    <string name="mute">Mute</string>
    <string name="keypad">Keypad</string>
    <string name="speaker">Speaker</string>
    <string name="add_call">Add call</string>
    <string name="permdesc_flashlight">flashlight</string>
    <string name="permlab_flashlight">flashlight</string>
    <string name="home_screen">Home Screen</string>
    <string name="lock_screen">Lock Screen</string>
    <string name="both">Both</string>
    <string name="change_request">Do you want to change the wallpaper to the</string>
    <string name="downloadFail">Download error! do you want to reload?</string>
    <string name="access_internet">Please check the network connection to continue using the function</string>
    <string name="progrees_string">Setting Wallpaper…</string>
    <string name="success_wallpaper">Set Wallpaper Success</string>
    <string name="fail_wallpaper">Set Wallpaper Fail</string>
    <string name="success_callflash">Set CallFlash Success</string>
    <string name="emptylist">Empty List</string>
    <string name="retry">Retry</string>
    <string name="loading">Loading...</string>
    <string name="turn_on_setting">You need to enable this function in the settings to continue using</string>
    <string name="accept_change">For best please accept application changes</string>
</resources>
