<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="bottomSheet"
            type="com.mgosu.callscreen.ui.activity.DetailWallpaperActivity" />
    </data>

<LinearLayout android:id="@+id/bottomsheet"
    android:orientation="vertical"
    android:background="@color/color_tran"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    app:behavior_hideable="false"
    app:behavior_peekHeight="@dimen/_45sdp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

        <RelativeLayout
            android:id="@+id/bottomsheetTitle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp">

            <TextView
                android:textSize="@dimen/_18sdp"
                android:layout_centerInParent="true"
                android:textColor="@color/color_white"
                android:text="@string/set_wallpaper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <ImageView
                android:id="@+id/ivArrow"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_arrow_up"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp" />

        </RelativeLayout>

        <View
            android:background="#CCC"
            android:layout_width="match_parent"
            android:layout_height="0.5dp" />

        <LinearLayout
            android:id="@+id/LinearLayoutHome"
            android:background="?attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/_20sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp">

            <ImageView
                android:src="@drawable/ic_home_wallpaper"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp" />

            <TextView
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/color_white"
                android:layout_marginStart="@dimen/_30sdp"
                android:text="@string/home_screen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/LinearLayoutLock"
            android:background="?attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/_20sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp">

            <ImageView
                android:src="@drawable/ic_lock"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp" />

            <TextView
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/color_white"
                android:layout_marginStart="@dimen/_30sdp"
                android:text="@string/lock_screen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayoutBoth"
            android:background="?attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/_20sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp">

            <ImageView
                android:src="@drawable/ic_both"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp" />

            <TextView
                android:textSize="@dimen/_14sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30sdp"
                android:text="@string/both"
                android:textColor="@color/color_white" />

        </LinearLayout>

    </LinearLayout>
</layout>
