<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="loadingState"
            type="Integer" />

        <variable
            name="facuk"
            type="Boolean" />

        <import type="android.view.View" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerViewImage3d"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </android.support.v7.widget.RecyclerView>

            <ProgressBar
                android:background="@android:color/transparent"
                android:visibility="@{(loadingState==0)?View.VISIBLE:View.GONE}"
                android:layout_centerInParent="true"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp" />

            <LinearLayout
                android:visibility="@{(loadingState==-1)?View.VISIBLE:View.GONE}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_centerInParent="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_18sdp"
                    android:textColor="@color/color_black"
                    android:text="@string/emptylist" />

                <Button
                    android:id="@+id/myButtonRetry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="@dimen/_10sdp"
                    android:paddingStart="@dimen/_10sdp"
                    android:text="@string/retry"
                    android:layout_marginTop="@dimen/_20sdp" />
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:visibility="@{(loadingState == 2)?View.VISIBLE:View.GONE}"
            android:gravity="center"
            android:orientation="horizontal">

            <ProgressBar
                android:background="@android:color/transparent"
                android:layout_centerInParent="true"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:visibility="visible" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loading"
                android:textColor="@color/color_black"
                android:textSize="@dimen/_13sdp"
                android:layout_marginLeft="@dimen/_5sdp" />
        </LinearLayout>
    </LinearLayout>
</layout>